build(dist): open java.io for reflection
Opens up java.io module for reflection so we can lookup the private fd
field of the FieldDescriptor class for use in NativeFS.